--- a/lib/citySelect.scss
+++ b/lib/citySelect.scss
@@ -115,7 +115,7 @@ $vm: 100vw/375;
     font-size: 14 * $vm;
     color: #999999;
     font-weight: 400;
-    padding:10 * $vm;
+    padding:8 * $vm 10 * $vm 4 * $vm 10 * $vm;
     margin:0;
   }
   .section>.grid {
